<resources>
    <string name="app_name">bashkirov_opisanie</string>
    <string name="strelka">TextView</string>
    <string name="opisanie">Описание</string>
    <string name="clear">Очистить</string>
    <string name="backtema">TODO</string>
    <string name="vector">TODO</string>
    <string name="sohranit">Button</string>
    <string name="sohran">Сохранить</string>
    <string name="ochistit">очистить</string>
    <string name="sohr">Сохранить</string>
    <string name="ochist">Очистить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Svyazilabel">Связи</string>
    <string name="identyficateLabel">Идентфикатор</string>
    <string name="iplabel">IP-адрес</string>
    <string name="DataPortlabel">Порт данных</string>
    <string name="SoundPortlabel">Порт звука</string>
    <string name="AltIPlabel">Альт.IP-адрес</string>
    <string name="VozvratLabel">Возврат (мин.)</string>
    <string name="EditBtn">Изменить</string>
    <string name="Deletebtn">Удалить</string>
    <string name="numerlabel">Номер</string>
    <string name="Vozvratlabel">Возврат (мин.)</string>
    <string name="Identificatelabel">Идентфикатор</string>
    <string name="dataportlabel">Порт данных</string>
    <string name="voiceportlabel">Порт звука</string>
    <string name="vozvratlbl">Возврат (мин.)</string>
    <string name="numbiplabel">Ном.IP</string>
    <string name="iplabel2">IP-адрес</string>
</resources>